# Triangulate

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cc
include/Triangulate/: cycle.h  face.h  half_edge.h  half_edge_iterator.h  mesh.h  triangulate.h  vector.h  vertex.h
src/: CMakeLists.txt  cycle.cc  face.cc  half_edge.cc  half_edge_iterator.cc  mesh.cc  triangulate.cc  vector.cc  vertex.cc
tests/: CMakeLists.txt  test_cycle.cc  test_half_edge.cc  test_mesh.cc  test_vector.cc  test_vertex.cc
